front/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    app.openshift.io/vcs-uri: 'https://github.com/mmartofel/kuberneter-probes-frontend'
    app.openshift.io/connects-to: 'probes'
  name: frontend
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/part-of: ANGULAR_DEMO_APP
    app.openshift.io/runtime: angularjs
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: frontend
  template:
    metadata:
      labels:
        deployment: frontend
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: frontend
          image: quay.io/mmartofe/frontend:main
          ports:
            - containerPort: 4200
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
